Week 02 Übungen + WTYK Updates

--- a/WTYK/LC_02/solution_exercise_reading_datasets.ipynb
+++ b/WTYK/LC_02/solution_exercise_reading_datasets.ipynb
@@ -23,7 +23,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "u:\\Lektionen\\GitHub_Repositories\\data_analytics\\WTYK\\LC_02\n"
+      "/workspaces/data_analytics/WTYK/LC_02\n"
      ]
     }
    ],
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
        "      <th>0</th>\n",
        "      <td>7324420</td>\n",
        "      <td>AUDI A5 Sportback 3.0 TDI quattro S-tronic (Li...</td>\n",
-       "      <td>CHF 22'500.–</td>\n",
+       "      <td>CHF 22'500.ï¿½</td>\n",
        "      <td>245 PS</td>\n",
        "      <td>10.2014</td>\n",
        "      <td>75'000 km</td>\n",
@@ -205,7 +205,7 @@
        "      <th>1</th>\n",
        "      <td>7512768</td>\n",
        "      <td>MERCEDES-BENZ SLK 200 7G-Tronic (Cabriolet)</td>\n",
-       "      <td>CHF 23'749.–</td>\n",
+       "      <td>CHF 23'749.ï¿½</td>\n",
        "      <td>184 PS</td>\n",
        "      <td>6.2013</td>\n",
        "      <td>46'655 km</td>\n",
@@ -217,7 +217,7 @@
        "      <th>2</th>\n",
        "      <td>7512034</td>\n",
        "      <td>MERCEDES-BENZ C 350 Avantgarde 4Matic 7G-Troni...</td>\n",
-       "      <td>CHF 18'500.–</td>\n",
+       "      <td>CHF 18'500.ï¿½</td>\n",
        "      <td>306 PS</td>\n",
        "      <td>6.2011</td>\n",
        "      <td>138'955 km</td>\n",
@@ -229,7 +229,7 @@
        "      <th>3</th>\n",
        "      <td>7512728</td>\n",
        "      <td>MERCEDES-BENZ A 45 AMG 4Matic Speedshift 7G-DC...</td>\n",
-       "      <td>CHF 36'000.–</td>\n",
+       "      <td>CHF 36'000.ï¿½</td>\n",
        "      <td>360 PS</td>\n",
        "      <td>8.2015</td>\n",
        "      <td>43'000 km</td>\n",
@@ -241,7 +241,7 @@
        "      <th>4</th>\n",
        "      <td>7490242</td>\n",
        "      <td>AUDI A5 Sportback 2.0 TFSI Sport quattro S-tro...</td>\n",
-       "      <td>CHF 48'500.–</td>\n",
+       "      <td>CHF 48'500.ï¿½</td>\n",
        "      <td>252 PS</td>\n",
        "      <td>9.2018</td>\n",
        "      <td>43'300 km</td>\n",
@@ -265,7 +265,7 @@
        "      <th>3975</th>\n",
        "      <td>7137137</td>\n",
        "      <td>FERRARI F360 Spider (Cabriolet)</td>\n",
-       "      <td>CHF 58'400.–</td>\n",
+       "      <td>CHF 58'400.ï¿½</td>\n",
        "      <td>400 PS</td>\n",
        "      <td>2.2002</td>\n",
        "      <td>78'000 km</td>\n",
@@ -277,7 +277,7 @@
        "      <th>3976</th>\n",
        "      <td>6758841</td>\n",
        "      <td>MERCEDES-BENZ SL 500 560 SL (Cabriolet)</td>\n",
-       "      <td>CHF 15'900.–</td>\n",
+       "      <td>CHF 15'900.ï¿½</td>\n",
        "      <td>232 PS</td>\n",
        "      <td>1.1987</td>\n",
        "      <td>315'000 km</td>\n",
@@ -288,8 +288,8 @@
        "    <tr>\n",
        "      <th>3977</th>\n",
        "      <td>7461330</td>\n",
-       "      <td>MERCEDES-BENZ CL 63 AMG 7G-Tronic (Coupé)</td>\n",
-       "      <td>CHF 42'000.–</td>\n",
+       "      <td>MERCEDES-BENZ CL 63 AMG 7G-Tronic (Coupï¿½)</td>\n",
+       "      <td>CHF 42'000.ï¿½</td>\n",
        "      <td>525 PS</td>\n",
        "      <td>8.2007</td>\n",
        "      <td>85'000 km</td>\n",
@@ -301,7 +301,7 @@
        "      <th>3978</th>\n",
        "      <td>7005403</td>\n",
        "      <td>BMW 328i Cabrio (Cabriolet)</td>\n",
-       "      <td>CHF 9'980.–</td>\n",
+       "      <td>CHF 9'980.ï¿½</td>\n",
        "      <td>193 PS</td>\n",
        "      <td>8.1995</td>\n",
        "      <td>188'920 km</td>\n",
@@ -313,7 +313,7 @@
        "      <th>3979</th>\n",
        "      <td>7200843</td>\n",
        "      <td>BMW 328i Cabrio Sport (Cabriolet)</td>\n",
-       "      <td>CHF 13'500.–</td>\n",
+       "      <td>CHF 13'500.ï¿½</td>\n",
        "      <td>193 PS</td>\n",
        "      <td>4.1999</td>\n",
        "      <td>134'000 km</td>\n",
@@ -327,31 +327,31 @@
        "</div>"
       ],
       "text/plain": [
-       "      Offer_Id                                               Type  \\\n",
-       "0      7324420  AUDI A5 Sportback 3.0 TDI quattro S-tronic (Li...   \n",
-       "1      7512768        MERCEDES-BENZ SLK 200 7G-Tronic (Cabriolet)   \n",
-       "2      7512034  MERCEDES-BENZ C 350 Avantgarde 4Matic 7G-Troni...   \n",
-       "3      7512728  MERCEDES-BENZ A 45 AMG 4Matic Speedshift 7G-DC...   \n",
-       "4      7490242  AUDI A5 Sportback 2.0 TFSI Sport quattro S-tro...   \n",
-       "...        ...                                                ...   \n",
-       "3975   7137137                    FERRARI F360 Spider (Cabriolet)   \n",
-       "3976   6758841            MERCEDES-BENZ SL 500 560 SL (Cabriolet)   \n",
-       "3977   7461330          MERCEDES-BENZ CL 63 AMG 7G-Tronic (Coupé)   \n",
-       "3978   7005403                        BMW 328i Cabrio (Cabriolet)   \n",
-       "3979   7200843                  BMW 328i Cabrio Sport (Cabriolet)   \n",
+       "     Offer_Id                                               Type  \\\n",
+       "0     7324420  AUDI A5 Sportback 3.0 TDI quattro S-tronic (Li...   \n",
+       "1     7512768        MERCEDES-BENZ SLK 200 7G-Tronic (Cabriolet)   \n",
+       "2     7512034  MERCEDES-BENZ C 350 Avantgarde 4Matic 7G-Troni...   \n",
+       "3     7512728  MERCEDES-BENZ A 45 AMG 4Matic Speedshift 7G-DC...   \n",
+       "4     7490242  AUDI A5 Sportback 2.0 TFSI Sport quattro S-tro...   \n",
+       "...       ...                                                ...   \n",
+       "3975  7137137                    FERRARI F360 Spider (Cabriolet)   \n",
+       "3976  6758841            MERCEDES-BENZ SL 500 560 SL (Cabriolet)   \n",
+       "3977  7461330        MERCEDES-BENZ CL 63 AMG 7G-Tronic (Coupï¿½)   \n",
+       "3978  7005403                        BMW 328i Cabrio (Cabriolet)   \n",
+       "3979  7200843                  BMW 328i Cabrio Sport (Cabriolet)   \n",
        "\n",
-       "             Price      PS Init_Regist   Kilometer Fuel_Type  \\\n",
-       "0     CHF 22'500.–  245 PS     10.2014   75'000 km    Diesel   \n",
-       "1     CHF 23'749.–  184 PS      6.2013   46'655 km    Benzin   \n",
-       "2     CHF 18'500.–  306 PS      6.2011  138'955 km    Benzin   \n",
-       "3     CHF 36'000.–  360 PS      8.2015   43'000 km    Benzin   \n",
-       "4     CHF 48'500.–  252 PS      9.2018   43'300 km    Benzin   \n",
-       "...            ...     ...         ...         ...       ...   \n",
-       "3975  CHF 58'400.–  400 PS      2.2002   78'000 km    Benzin   \n",
-       "3976  CHF 15'900.–  232 PS      1.1987  315'000 km    Benzin   \n",
-       "3977  CHF 42'000.–  525 PS      8.2007   85'000 km    Benzin   \n",
-       "3978   CHF 9'980.–  193 PS      8.1995  188'920 km    Benzin   \n",
-       "3979  CHF 13'500.–  193 PS      4.1999  134'000 km    Benzin   \n",
+       "               Price      PS Init_Regist   Kilometer Fuel_Type  \\\n",
+       "0     CHF 22'500.ï¿½  245 PS     10.2014   75'000 km    Diesel   \n",
+       "1     CHF 23'749.ï¿½  184 PS      6.2013   46'655 km    Benzin   \n",
+       "2     CHF 18'500.ï¿½  306 PS      6.2011  138'955 km    Benzin   \n",
+       "3     CHF 36'000.ï¿½  360 PS      8.2015   43'000 km    Benzin   \n",
+       "4     CHF 48'500.ï¿½  252 PS      9.2018   43'300 km    Benzin   \n",
+       "...              ...     ...         ...         ...       ...   \n",
+       "3975  CHF 58'400.ï¿½  400 PS      2.2002   78'000 km    Benzin   \n",
+       "3976  CHF 15'900.ï¿½  232 PS      1.1987  315'000 km    Benzin   \n",
+       "3977  CHF 42'000.ï¿½  525 PS      8.2007   85'000 km    Benzin   \n",
+       "3978   CHF 9'980.ï¿½  193 PS      8.1995  188'920 km    Benzin   \n",
+       "3979  CHF 13'500.ï¿½  193 PS      4.1999  134'000 km    Benzin   \n",
        "\n",
        "                        Transmission  Price_numeric  \n",
        "0     Automatisiertes Schaltgetriebe        22500.0  \n",
@@ -369,7 +369,7 @@
        "[3980 rows x 9 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,13 +389,13 @@
     "\n",
     "# Function to extract numerical values from the price column\n",
     "def extract_numerical_value(price):\n",
-    "    # Use regex to extract numerical values\n",
-    "    match = re.search(r\"(\\d+\\'\\d+)\", price)\n",
-    "    if match:\n",
-    "        # Remove the thousands separator and convert to integer\n",
-    "        return float(match.group().replace(\"'\", ''))\n",
-    "    else:\n",
-    "        return None\n",
+    "    if isinstance(price, str):\n",
+    "        # Use regex to extract numerical values\n",
+    "        match = re.search(r\"(\\d+\\'\\d+)\", price)\n",
+    "        if match:\n",
+    "            # Remove the thousands separator and convert to float\n",
+    "            return float(match.group().replace(\"'\", ''))\n",
+    "    return None\n",
     "\n",
     "# Apply the function to the 'Price' column and create a new column 'Price_numeric'\n",
     "df['Price_numeric'] = df['Price'].apply(extract_numerical_value)\n",
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +455,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.13"
   },
   "orig_nbformat": 4
  },
